# searchEngineWorldCinema

./: CMakeLists.txt
searchEngineWorldCinema/: CMakeLists.txt
searchEngineWorldCinema/include/: ConverterJSON.h
searchEngineWorldCinema/src/: ConverterJSON.cpp  searchEngineWorldCinema.cpp
tests/: CMakeLists.txt  serverTests.cpp
